--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                              <a class="nav-link fw-bold text-secondary  " href="#">INFO</a>
                          </li>
                          <li class="nav-item">
-                             <a class="nav-link fw-bold text-secondary" href="#">FEEDBAKE</a>
+                             <a class="nav-link fw-bold text-secondary" href="#">FEEDBACK</a>
                          </li>
                          <li class="nav-item">
-                             <a  class="nav-link fw-bold text-secondary" href="#">BLOGSE</a>
+                             <a  class="nav-link fw-bold text-secondary" href="#">BLOGS</a>
                          </li>
                          <li class="nav-item ">
                              <a class="btn btn-main nav-register py-2 px-5 text-light fw-bold rounded-2 border border-info" href="#">Register</a>
@@ -68,31 +68,37 @@
                      <div class="carousel-inner">
                          <div class="carousel-item active" >
                              <img src="images/cover/cover-1.jpg" class="d-block w-100 rounded-2 " alt="...">
-                             <div class="carousel-caption d-md-block mb-5 pb-5 text-light">
+                             <div class="carousel-caption d-md-block pb-5 text-light">
                                  <h1 class="fw-bold fs-1  ">Quality learning</h1>
-                                 <h5 class="fw-semibold d-none d-md-block ">Lorem ipsum dolor sit amet consectetur
-                                     adipisicing elit. In
-                                     error dolorem ducimus praesentium veritatis itaque!</h5>
+                                 <p class="fw-semibold d-none d-md-block ">It is a long established fact that a reader will be distracted
+                                    by
+                                    the
+                                    readable<br> content of a page
+                                    when looking at its layout.</p>
                                  <a class="btn btn-main py-2 px-5 text-light fw-bold rounded-2 border border-info"href="#">Get started</a>     
                              </div>
                          </div>
                          <div class="carousel-item" >
                              <img src="images/cover/cover-3.jpg" class="d-block w-100 rounded-2" alt="...">
-                             <div class="carousel-caption d-md-block mb-5 pb-5">
+                             <div class="carousel-caption d-md-block pb-5">
                                  <h1 class="fw-bold fs-1 text-light">Quality learning</h1>
-                                 <p class="fw-semibold d-none d-md-block ">Lorem ipsum dolor sit amet consectetur
-                                     adipisicing elit. In
-                                     error dolorem ducimus praesentium veritatis itaque!</p>
+                                 <p class="fw-semibold d-none d-md-block ">It is a long established fact that a reader will be distracted
+                                    by
+                                    the
+                                    readable<br> content of a page
+                                    when looking at its layout.</p>
                                  <a class="btn btn-main py-2 px-5 text-light fw-bold rounded-2 border border-info"href="#">Get started</a>        
                              </div>
                          </div>
                          <div class="carousel-item" >
                              <img src="images/cover/cover-5.jpg" class="d-block w-100 rounded-2 " alt="...">
-                             <div class="carousel-caption d-md-block mb-5 pb-5">
+                             <div class="carousel-caption d-md-block pb-5">
                                  <h1 class="fw-bold fs-1 text-light">Quality learning</h1>
-                                 <p class="fw-semibold d-none d-md-block">Lorem ipsum dolor sit amet consectetur
-                                     adipisicing elit. In
-                                     error dolorem ducimus praesentium veritatis itaque!</p>
+                                 <p class="fw-semibold d-none d-md-block">It is a long established fact that a reader will be distracted
+                                    by
+                                    the
+                                    readable<br> content of a page
+                                    when looking at its layout.</p>
                                  <a class="btn btn-main py-2 px-5 text-light fw-bold rounded-2 border border-info"href="#">Get started</a>
                              </div>
                          </div>
@@ -312,7 +318,9 @@
              class="d-lg-flex justify-content-around align-items-center bg-main p-5 text-center text-md-start rounded-4 shadow-lg">
              <div class="">
                  <h1 class="fw-bold text-white">Ready to Join?</h1>
-                 <p class="fw-semibold text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, neque?</p>
+                 <p class="fw-semibold text-white">It is a long established fact that a reader will be distracted
+                    by the<br>
+                    readable content of a page when looking at its layout.</p>
              </div>
              <div class="">
                  <!-- Button trigger modal -->
@@ -371,7 +379,9 @@
      <section class="container pt-5">
          <div class="text-center ">
              <h1 class="fw-bold text-secondary">Meet Our Successful <br> Students</h1>
-             <p class="pb-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, ipsum.</p>
+             <p class="pb-2">It is a long established fact that a reader will be distracted
+                by the<br>
+                readable content of a page when looking at its layout.</p>
              <div class="row g-2">
                  <div class="col-12 col-md-6 col-lg-3">
                      <div class="border-2 shadow-sm text-center bg-light pb-2">
@@ -414,7 +424,9 @@
      <section class="container">
          <div class="section-title text-center">
              <h1 class="fw-bold text-secondary">Some Students Feedback</h1>
-             <p class="text-muted w-75 mx-auto">Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Distinctio, eligendi ullam dolore odit a exercitationem obcaecati aliquam! Neque, doloribus veritatis.
+             <p class="text-muted w-75 mx-auto">It is a long established fact that a reader will be distracted
+                by the<br>
+                readable content of a page when looking at its layout.
              </p>
          </div>
          <br>
@@ -438,7 +450,9 @@
 
                      <div class="card-body py-3 px-0">
 
-                         <p class="card-text text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem nostrum beatae, sint ad, repudiandae id alias dolores nisi, modi saepe corrupti? Delectus cupiditate adipisci nisi.</p>
+                         <p class="card-text text-muted">It is a long established fact that a reader will be distracted
+                            by the<br>
+                            readable content of a page when looking at its layout.</p>
                          <div class="d-flex align-items-center gap-3">
                              <div>
                                  <img src="images/student/student-5.png" alt="">
@@ -470,7 +484,9 @@
 
                      <div class="card-body py-3 px-0">
 
-                         <p class="card-text text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, beatae! Culpa ullam repellendus numquam itaque vel temporibus maiores consectetur incidunt. Maxime quibusdam magni in consequuntur?</p>
+                         <p class="card-text text-muted">It is a long established fact that a reader will be distracted
+                            by the<br>
+                            readable content of a page when looking at its layout.</p>
                          <div class="d-flex align-items-center gap-3">
                              <div>
                                  <img src="images/student/student-6.png" alt="">
@@ -525,12 +541,11 @@
                               <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                                   aria-labelledby="panelsStayOpen-headingOne">
                                   <div class="accordion-body">
-                                      <strong>
-                                          Grid and flexbox. The basic difference between CSS Grid Layout and CSS Flexbox
-                                          Layout is that flexbox was designed for layout in one dimension - either a row
-                                          or a column. Grid was designed for two-dimensional layout - rows, and columns
-                                          at the same time.
-                                      </strong>
+                                    Grid and flexbox. The basic difference between CSS Grid Layout and <strong>CSS
+                                        Flexbox</strong> Layout is
+                                    that flexbox was designed for layout in one dimension - either a row or a column.
+                                    <strong>Grid</strong>
+                                    was designed for two-dimensional layout - rows, and columns at the same time.
                                   </div>
                               </div>
                           </div>
@@ -545,12 +560,12 @@
                               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                                   aria-labelledby="panelsStayOpen-headingTwo">
                                   <div class="accordion-body">
-                                      <strong>
-                                          Bootstrap's utility and layout classes provide you with everything you need to
-                                          style a responsive webpage. With Tailwind, however, you are much more involved
-                                          in styling the webpage because you end up having to create your own components
-                                          using the utility classes that the framework offers.
-                                      </strong>
+                                    <strong>Bootstrap's</strong> utility and layout classes provide you with everything you
+                                    need to style a
+                                    responsive webpage. <strong> With Tailwind,</strong> however, you are much more involved
+                                    in styling the
+                                    webpage because you end up having to create your own components using the utility
+                                    classes that the framework offers.
                                   </div>
                               </div>
                           </div>
@@ -565,9 +580,10 @@
                               <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                                   aria-labelledby="panelsStayOpen-headingThree">
                                   <div class="accordion-body">
-                                      <strong>The CSS box model is essentially a box that wraps around every HTML
-                                          element. It consists of: margins, borders, padding, and the actual
-                                          content.</strong>
+                                    In web development, <strong>the CSS box model</strong> refers to how HTML elements are
+                                    modeled in browser
+                                    engines and how the dimensions of those HTML elements are derived from CSS properties.
+                                    It is a fundamental concept for the composition of HTML webpages.
                                   </div>
                               </div>
                           </div>
@@ -582,15 +598,12 @@
                               <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
                                   aria-labelledby="panelsStayOpen-headingFour">
                                   <div class="accordion-body">
-                                      <strong>
-                                          The HTML semantics refers to the tags that provide meaning to an HTML page
-                                          rather than just presentation. It makes HTML more comprehensible by better
-                                          defining the different sections and layout of web pages. <br>
-                                          Examples of non-semantic elements: div and span - Tells nothing about its
-                                          content. <br>
-                                          Examples of semantic elements: form, table, and article - Clearly defines its
-                                          content.
-                                      </strong>
+                                    <strong>Semantic HTML</strong> is the use of HTML markup to reinforce the semantics, or
+                                    meaning, of the
+                                    information in web pages and web applications rather than merely to define its
+                                    presentation or look. <strong>Semantic HTML</strong> is processed by traditional web
+                                    browsers as well as
+                                    by many other user agents.
                                   </div>
                               </div>
                           </div>
